2009-06-28  Paolo Bonzini  <bonzini@gnu.org>

        * builtins.c (expand_errno_check): Use do_compare_rtx_and_jump.
        * dojump.c (do_jump): Change handling of floating-point
        ops to use just do_compare_and_jump.
        (split_comparison): New.
        (do_compare_rtx_and_jump): Add here logic coming previously
        in do_jump, using split_comparison.

2009-06-27  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/40489
	* config/ia64/ia64.c (ia64_reorg): Check NULL insn.

2009-06-27  Paolo Bonzini  <bonzini@gnu.org>

	* tree-ssa-alias.c: Fix unintentional commit.

2009-06-27  Paolo Bonzini  <bonzini@gnu.org>

	* passes.c (execute_one_pass): Fix unintentional commit.

2009-06-27  Paolo Bonzini  <bonzini@gnu.org>

	* df-problems.c (df_set_seen, df_unset_seen): Delete.
	(df_rd_local_compute, df_md_local_compute): Inline them.

	(df_md_scratch): New.
	(df_md_alloc, df_md_free): Allocate/free it.
	(df_md_local_compute): Only include live registers in init.
	(df_md_transfer_function): Prune the in-set computed by
	the confluence function, and the gen-set too.

2009-06-27  Paolo Bonzini  <bonzini@gnu.org>

	PR rtl-optimization/26854
	* timevar.def: Remove TV_DF_RU, add TV_DF_MD.
	* df-problems.c (df_rd_add_problem): Fix comment.
	(df_md_set_bb_info, df_md_free_bb_info, df_md_alloc,
	df_md_simulate_artificial_defs_at_top,
	df_md_simulate_one_insn, df_md_bb_local_compute_process_def,
	df_md_bb_local_compute, df_md_local_compute, df_md_reset,
	df_md_transfer_function, df_md_init, df_md_confluence_0,
	df_md_confluence_n, df_md_free, df_md_top_dump, df_md_bottom_dump,
	problem_MD, df_md_add_problem): New.
	* df.h (DF_MD, DF_MD_BB_INFO, struct df_md_bb_info, df_md,
	df_md_get_bb_info): New.
	DF_LAST_PROBLEM_PLUS1): Adjust.

	* Makefile.in (fwprop.o): Include domwalk.h.
	* fwprop.c: Include domwalk.h.
	(reg_defs, reg_defs_stack): New.
	(bitmap_only_bit_between): Remove.
	(process_defs): New.
	(process_uses): Use reg_defs and local_md instead of